// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charge AfterContent should aggregate line_items by subscriptions 1`] = `
<div>
  <div
    class="mt-2"
  >
    <div
      class="card"
    >
      <div
        class="header clearfix card-body"
      >
        <a
          target="_blank"
        >
          <span>
            <span
              aria-label="subscription emoji"
              role="img"
            >
              🔄
            </span>
             
            Subscription #
            1
          </span>
        </a>
      </div>
      <div
        class="content card-body"
      >
        <span>
          foo
           (
          7
          )
        </span>
        <span>
          bar
           (
          5
          )
        </span>
      </div>
    </div>
    <div
      class="card"
    >
      <div
        class="header clearfix card-body"
      >
        <a
          target="_blank"
        >
          <span>
            <span
              aria-label="subscription emoji"
              role="img"
            >
              🔄
            </span>
             
            Subscription #
            2
          </span>
        </a>
      </div>
      <div
        class="content card-body"
      >
        <span>
          baz
           (
          1
          )
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 1`] = `
<div>
  <div
    class="action-buttons btn-group"
    role="group"
  >
    <button
      class="button action-button btn btn-secondary btn-sm"
      id="action-button-3"
      type="button"
    >
      <span
        id="action-button-3-tooltip-target"
        style="position: absolute; height: 100%; width: 100%; top: 0px; left: 0px;"
      />
      <i
        class="material-icons"
      >
        refresh
      </i>
       Refund
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 2`] = `
<div>
  <div
    class="action-buttons btn-group"
    role="group"
  >
    <button
      class="button action-button btn btn-secondary btn-sm"
      id="action-button-4"
      type="button"
    >
      <span
        id="action-button-4-tooltip-target"
        style="position: absolute; height: 100%; width: 100%; top: 0px; left: 0px;"
      />
      <i
        class="material-icons"
      >
        refresh
      </i>
       Refund
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 1`] = `
<div>
  <div
    class="action-buttons btn-group"
    role="group"
  >
    <button
      class="button action-button btn btn-secondary btn-sm"
      id="action-button-5"
      type="button"
    >
      <span
        id="action-button-5-tooltip-target"
        style="position: absolute; height: 100%; width: 100%; top: 0px; left: 0px;"
      />
      <i
        class="material-icons"
      >
        refresh
      </i>
       Refund
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 2`] = `
<div>
  <div
    class="action-buttons btn-group"
    role="group"
  >
    <button
      class="button action-button btn btn-secondary btn-sm"
      id="action-button-6"
      type="button"
    >
      <span
        id="action-button-6-tooltip-target"
        style="position: absolute; height: 100%; width: 100%; top: 0px; left: 0px;"
      />
      <i
        class="material-icons"
      >
        refresh
      </i>
       Refund
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should not display the refund action when the status is not SUCCESS or PARTIALLY_REFUNDED 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 2`] = `<div />`;

exports[`Charge BeforeContent should display default color if there's no matching status 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Status:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-secondary badge-pill"
        >
          Foobar
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Charge BeforeContent should display the appropriate color if there's a matching status 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Status:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-danger badge-pill"
        >
          Error
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the skipCharge action if the charge is queued 1`] = `
<div>
  <div
    class="action-buttons btn-group"
    role="group"
  >
    <button
      class="button action-button btn btn-secondary btn-sm"
      id="action-button-1"
      type="button"
    >
      <span
        id="action-button-1-tooltip-target"
        style="position: absolute; height: 100%; width: 100%; top: 0px; left: 0px;"
      />
      <i
        class="material-icons mr-1"
      >
        block
      </i>
       Skip
    </button>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the unskipCharge action if the charge is skipped 1`] = `
<div>
  <div
    class="action-buttons btn-group"
    role="group"
  >
    <button
      class="button action-button btn btn-secondary btn-sm"
      id="action-button-2"
      type="button"
    >
      <span
        id="action-button-2-tooltip-target"
        style="position: absolute; height: 100%; width: 100%; top: 0px; left: 0px;"
      />
      <i
        class="material-icons mr-1"
      >
        autorenew
      </i>
       Unskip
    </button>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should not display any action if the charge is nor queued nor skipped 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if isEditing 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if there's no integrationId 1`] = `<div />`;

exports[`Charge TitleWrapper customer context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper customer context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any link because no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any provided link when no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;
